--- a/src/components/radio/radio.css
+++ b/src/components/radio/radio.css
@@ -2,7 +2,8 @@
     display: block;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
+    padding-right: 10px;
+    /* margin-bottom: 12px; */
     cursor: pointer;
     font-size: 1rem;
     -webkit-user-select: none;
