--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -24,13 +24,13 @@
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+    background-color: darkgray;
 }
 
 /* Style the tab content */
-.tabcontent {
-    /* display: none; */
+.tabContent {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    /* width: 100%; */
 }
