--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -1,13 +1,13 @@
-/* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
 
-/* Style the buttons inside the tab */
+.tab-border {
+    /* border: 1px solid #ccc; */
+}
+
 .tab button {
-    background-color: inherit;
     float: left;
     border: none;
     outline: none;
@@ -15,19 +15,17 @@
     padding: 5px 16px;
     transition: 0.3s;
     font-size: 16px;
+    margin: 2px;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
     background-color: lightsteelblue;
 }
 
-/* Create an active/current tablink class */
 .tab button.active {
     background-color: darkgray;
 }
 
-/* Style the tab content */
 .tabContent {
     padding: 6px 12px;
     border: 1px solid #ccc;
