--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,14 +1,9 @@
-/* .App {
-  text-align: center;
-} */
-
 .App-header {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
@@ -16,17 +11,15 @@
   margin: 20px;
 }
 
-/* ul {
+ul {
   list-style-type: none;
-} */
+}
 
 .item-width {
   width: 800px;
 }
 
 @media only screen and (max-width: 768px) {
-
-  /* For mobile phones: */
   .item-width {
     width: 100%;
   }
